--- a/install_apache.yaml
+++ b/install_apache.yaml
@@ -4,36 +4,21 @@
   become: true
   tasks:
 
-  - name: update repository index
+  - name: install httpd & php support for apache
     dnf:
-      update_cache : yes
-    when: ansible_distribution == "Rocky"
-
-  - name: install httpd package
-    dnf:
-      name: httpd
+      name:
+        - httpd
+        - php
       state: present
-    when: ansible_distribution == "Rocky" and ansible_distribution_version == "8.5"
-
-  - name: add php support for apache
-    dnf:
-      name: php
-      state: present
+      update_cache: yes
     when: ansible_distribution in ["Rocky", "CentOS"]
 
-  - name: update repository index
+  - name: install apache2 & php  package
     apt:
-      update_cache : yes
+      name:
+        - apache2
+        - libapache2-mod-php
+      state: present
+      update_cache: yes
     when: ansible_distribution == "Ubuntu"
 
-  - name: install httpd package
-    apt:
-      name: apache2
-      state: present
-    when: ansible_distribution == "Ubuntu"
-
-  - name: add php support for apache
-    apt:
-      name: libapache2-mod-php
-      state: present
-    when: ansible_distribution == "Ubuntu"
